--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "mongoose": "^5.10.0",
     "monk": "^7.3.0",
     "morgan": "^1.10.0",
     "nedb": "^1.8.0",
